border final edit

--- a/CSS/homebanner.css
+++ b/CSS/homebanner.css
@@ -71,7 +71,6 @@ line-height:31.47p;
    .contact-form form {
      display: flex;
      flex-direction: column;
-     border: none;
    }
    
    .contact-form form input,
@@ -82,6 +81,7 @@ line-height:31.47p;
      border: 1px solid #ccc;
      background-color: #ECECEC;
      border-radius: 5px;
+     border: 0;
    }
    .contact-form form input::placeholder,
    .contact-form form textarea::placeholder,
