--- a/CSS/abovefooter.css
+++ b/CSS/abovefooter.css
@@ -2,9 +2,6 @@
     font-family: inter;
     src: url(Inter-Regular.woff);
 }
-.abovefooter{
-    background-color: #1B1B1B;
-}
 .ending{
     display: flex;
     justify-content: center;
@@ -21,6 +18,7 @@
     font-weight: 400 ;
     line-height: 26px;
     margin-bottom: 34px;
+    max-width: 445px;
 }
 
 .aboutcomp a img{
@@ -77,7 +75,7 @@ margin-bottom: 30px;
     opacity: 12%;
 }
 
-.footerr p{
+.footer p{
     display: flex;
     font-family: inter;
     color: #9D9DA4;
@@ -88,4 +86,8 @@ padding-bottom: 20px;
 justify-content: center;
 text-decoration: none;
 
+}
+
+.lastsec{
+    background-color: #1B1B1B;
 }
