--- a/CSS/portfolioandcontact.css
+++ b/CSS/portfolioandcontact.css
@@ -2,7 +2,7 @@
     font-family: inter;
     src: url(Inter-Regular.woff);
   }
-.portfolioandcontactfooter{
+.portfolioandcontact{
   background-image: url(backgroundimages/curvebackground.png);
   background-repeat: no-repeat;
   background-size: cover;
